{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "0d591860-e460-46dd-a3e6-671aa64ca166",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "49c3cd4e-50fd-454b-971a-36715fbc91ce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "2fdf1204-269a-4df8-a414-26bf038f12fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b37d1ad-fe27-4fc8-aa29-ef58443a89c7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a98c3121-dcb6-45cc-b95b-7679dfa6da22",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}